Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -266,7 +266,6 @@ nav {
                         color: @color-swatch5;
                         line-height: @font-swatch6-line-height;
                         letter-spacing: @font-swatch6-letter-spacing;
-                        text-align: center;
                         &:hover {
                             color: @color-swatch1;
                         }
@@ -303,7 +302,6 @@ nav {
                             line-height: @font-swatch6-line-height;
                             letter-spacing: @font-swatch6-letter-spacing;
                             position: relative;
-                            text-align: center;
                             &:hover {
                                 color: @color-swatch1;
                                 text-decoration: none;
